--- a/Sandbox/Demo Numpy2.ipynb
+++ b/Sandbox/Demo Numpy2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 2,
    "id": "3912206a",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "78457d25",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "array([2, 5, 8])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "ae83d95f",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
        "array([30, 60, 80, 20, 50, 80])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "9642c738",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
        "[3, 6, 8, 2, 5, 8, 3, 6, 8, 2, 5, 8]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "d07d1688",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "[3, 6, 8, 2, 5, 8, 3, 6, 8, 2, 5, 8]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "8acbdbf8",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "'abcabc'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "c4a07db9",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
        "array([ 9, 36, 64,  4, 25, 64])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "84917637",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "       195, 196, 197, 198, 199])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "32397fca",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
        "       39204, 39601])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "592f1a6b",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "cfcc2517",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
        "array([ 9,  9,  8,  8, 11])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "5d52ac39",
    "metadata": {},
    "outputs": [],
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "ca2fed5c",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
        "       [15, 16]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "id": "6ea16749",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
        "8"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "id": "813d35fa",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
        "       [ 9, 10]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "id": "f4d016e3",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
        "array([ 8, 10])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "id": "b04bbce9",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
        "array([ 2,  4,  6,  8, 10, 12, 14, 16])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "d3978c9e",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
        "(array([6]),)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "id": "a9d26179",
    "metadata": {},
    "outputs": [
@@ -494,7 +494,7 @@
        "array([False, False, False, False,  True,  True,  True,  True])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "id": "03d568ba",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "4"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "id": "3073ce9b",
    "metadata": {},
    "outputs": [
@@ -536,7 +536,7 @@
        "1"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "id": "0732116c",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,7 @@
        "array([ 2,  4,  6,  8, 10, 12, 14, 16])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "id": "3addf6ca",
    "metadata": {},
    "outputs": [
@@ -578,7 +578,7 @@
        "1"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "id": "67c1e3b3",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
        "2"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 30,
    "id": "6b54ae5a",
    "metadata": {},
    "outputs": [
@@ -623,7 +623,7 @@
        "       [ 4,  8, 12, 16]])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 31,
    "id": "0299997d",
    "metadata": {},
    "outputs": [],
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 32,
    "id": "7c7cfef2",
    "metadata": {},
    "outputs": [
@@ -658,7 +658,7 @@
        "       [   8,   32,  120, 1600]])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 33,
    "id": "28d498d0",
    "metadata": {},
    "outputs": [
@@ -679,7 +679,7 @@
        "16"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 34,
    "id": "2761afe6",
    "metadata": {},
    "outputs": [
@@ -700,7 +700,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 35,
    "id": "bda4a77c",
    "metadata": {},
    "outputs": [
@@ -721,7 +721,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 36,
    "id": "e86da1c0",
    "metadata": {},
    "outputs": [
@@ -742,7 +742,7 @@
        "array([1. , 2. , 3. , 4. , 5.5])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 37,
    "id": "5b19e32c",
    "metadata": {},
    "outputs": [
@@ -764,7 +764,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 38,
    "id": "6409321d",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,7 @@
        "       8.8, 8.9, 9. , 9.1, 9.2, 9.3, 9.4, 9.5, 9.6, 9.7, 9.8, 9.9])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 39,
    "id": "356b57ef",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
        "        9.8,  9.9, 10. ])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 40,
    "id": "82de21c7",
    "metadata": {},
    "outputs": [
@@ -846,7 +846,7 @@
        "       0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 41,
    "id": "571da47e",
    "metadata": {},
    "outputs": [
@@ -874,7 +874,7 @@
        "       1., 1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 42,
    "id": "2873e504",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,7 @@
        "       8, 8, 8])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 43,
    "id": "500c43d4",
    "metadata": {},
    "outputs": [
@@ -923,7 +923,7 @@
        "       [13, 14, 15, 16]])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 44,
    "id": "2131f048",
    "metadata": {},
    "outputs": [
@@ -945,7 +945,7 @@
        "array([ 8, 12])"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 45,
    "id": "f52cf6f2",
    "metadata": {},
    "outputs": [
@@ -966,7 +966,7 @@
        "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16])"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 46,
    "id": "36896ede",
    "metadata": {},
    "outputs": [
@@ -988,7 +988,7 @@
        "        True, False, False, False, False,  True, False])"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,44 +999,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 47,
    "id": "ae38cdc5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 3,  6,  9, 12, 15])"
+       "array([ 5, 10, 15])"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a[a % 3 == 0]"
+    "a[a % 5 == 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 48,
    "id": "689b7d23",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([11, 12, 13, 14, 15, 16])"
+       "array([10, 11, 12, 13, 14, 15, 16])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a[a ** 2 > 100]"
+    "a[a > 9]"
    ]
   },
   {
