--- a/Sandbox/Demo Pandas2.ipynb
+++ b/Sandbox/Demo Pandas2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5b7ba9ae",
+   "id": "74ad8fc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "273fed59",
+   "execution_count": 35,
+   "id": "628beb90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,24 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aaa87ca1",
+   "execution_count": 58,
+   "id": "ed6a44c3",
    "metadata": {},
    "outputs": [],
    "source": [
     "sales = {\n",
-    "    'account': ['Jones LLC', 'Alpha Co', 'Blue Inc'], \n",
-    "    'Jan': [150, 200, 50],\n",
-    "    'Feb': [200, 210, 90],\n",
-    "    'Mar': [140, 215, 95]\n",
+    "    'bedrijf': ['Jones LLC', 'Alpha Co'], \n",
+    "    'Jan': [150, 200],\n",
+    "    'Feb': [200, 210],\n",
+    "    'Apr': [140, 215]\n",
     "} \n",
-    "df = pd.DataFrame.from_dict(sales)"
+    "df2 = pd.DataFrame.from_dict(sales)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "dd402fe0",
+   "execution_count": 46,
+   "id": "9afdaf07",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,6 @@
        "      <th>Jan</th>\n",
        "      <th>Feb</th>\n",
        "      <th>Mar</th>\n",
-       "      <th>soort</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -80,38 +79,35 @@
        "      <th>0</th>\n",
        "      <td>Jones LLC</td>\n",
        "      <td>150</td>\n",
-       "      <td>200.0</td>\n",
+       "      <td>200</td>\n",
        "      <td>140</td>\n",
-       "      <td>A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Alpha Co</td>\n",
        "      <td>200</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>210</td>\n",
        "      <td>215</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Blue Inc</td>\n",
        "      <td>50</td>\n",
-       "      <td>90.0</td>\n",
+       "      <td>90</td>\n",
        "      <td>95</td>\n",
-       "      <td>B</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     account  Jan    Feb  Mar soort\n",
-       "0  Jones LLC  150  200.0  140     A\n",
-       "1   Alpha Co  200    NaN  215   NaN\n",
-       "2   Blue Inc   50   90.0   95     B"
+       "     account  Jan  Feb  Mar\n",
+       "0  Jones LLC  150  200  140\n",
+       "1   Alpha Co  200  210  215\n",
+       "2   Blue Inc   50   90   95"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,8 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "d0f1f456",
+   "execution_count": 47,
+   "id": "a32f6556",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +147,6 @@
        "      <th>Jan</th>\n",
        "      <th>Feb</th>\n",
        "      <th>Mar</th>\n",
-       "      <th>soort</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -159,38 +154,35 @@
        "      <th>0</th>\n",
        "      <td>Jones LLC</td>\n",
        "      <td>150</td>\n",
-       "      <td>200.0</td>\n",
+       "      <td>200</td>\n",
        "      <td>140</td>\n",
-       "      <td>A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Alpha Co</td>\n",
        "      <td>200</td>\n",
-       "      <td>90.0</td>\n",
+       "      <td>210</td>\n",
        "      <td>215</td>\n",
-       "      <td>B</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Blue Inc</td>\n",
        "      <td>50</td>\n",
-       "      <td>90.0</td>\n",
+       "      <td>90</td>\n",
        "      <td>95</td>\n",
-       "      <td>B</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     account  Jan    Feb  Mar soort\n",
-       "0  Jones LLC  150  200.0  140     A\n",
-       "1   Alpha Co  200   90.0  215     B\n",
-       "2   Blue Inc   50   90.0   95     B"
+       "     account  Jan  Feb  Mar\n",
+       "0  Jones LLC  150  200  140\n",
+       "1   Alpha Co  200  210  215\n",
+       "2   Blue Inc   50   90   95"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,8 +193,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "fdbe3a15",
+   "execution_count": 48,
+   "id": "e6ae734a",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +222,6 @@
        "      <th>Jan</th>\n",
        "      <th>Feb</th>\n",
        "      <th>Mar</th>\n",
-       "      <th>soort</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -238,38 +229,35 @@
        "      <th>0</th>\n",
        "      <td>Jones LLC</td>\n",
        "      <td>150</td>\n",
-       "      <td>200.0</td>\n",
+       "      <td>200</td>\n",
        "      <td>140</td>\n",
-       "      <td>A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Alpha Co</td>\n",
        "      <td>200</td>\n",
-       "      <td>145.0</td>\n",
+       "      <td>210</td>\n",
        "      <td>215</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Blue Inc</td>\n",
        "      <td>50</td>\n",
-       "      <td>90.0</td>\n",
+       "      <td>90</td>\n",
        "      <td>95</td>\n",
-       "      <td>B</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     account  Jan    Feb  Mar soort\n",
-       "0  Jones LLC  150  200.0  140     A\n",
-       "1   Alpha Co  200  145.0  215   NaN\n",
-       "2   Blue Inc   50   90.0   95     B"
+       "     account  Jan  Feb  Mar\n",
+       "0  Jones LLC  150  200  140\n",
+       "1   Alpha Co  200  210  215\n",
+       "2   Blue Inc   50   90   95"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,8 +267,376 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "5d8f2507",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>account</th>\n",
+       "      <th>Jan</th>\n",
+       "      <th>Feb</th>\n",
+       "      <th>Mar</th>\n",
+       "      <th>bedrijf</th>\n",
+       "      <th>Apr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jones LLC</td>\n",
+       "      <td>150</td>\n",
+       "      <td>200</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alpha Co</td>\n",
+       "      <td>200</td>\n",
+       "      <td>210</td>\n",
+       "      <td>215.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Blue Inc</td>\n",
+       "      <td>50</td>\n",
+       "      <td>90</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>150</td>\n",
+       "      <td>200</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Jones LLC</td>\n",
+       "      <td>140.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>200</td>\n",
+       "      <td>210</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alpha Co</td>\n",
+       "      <td>215.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     account  Jan  Feb    Mar    bedrijf    Apr\n",
+       "0  Jones LLC  150  200  140.0        NaN    NaN\n",
+       "1   Alpha Co  200  210  215.0        NaN    NaN\n",
+       "2   Blue Inc   50   90   95.0        NaN    NaN\n",
+       "0        NaN  150  200    NaN  Jones LLC  140.0\n",
+       "1        NaN  200  210    NaN   Alpha Co  215.0"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([df, df2], axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "58fe7198",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>account</th>\n",
+       "      <th>Jan</th>\n",
+       "      <th>Feb</th>\n",
+       "      <th>Mar</th>\n",
+       "      <th>bedrijf</th>\n",
+       "      <th>Jan</th>\n",
+       "      <th>Feb</th>\n",
+       "      <th>Apr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jones LLC</td>\n",
+       "      <td>150</td>\n",
+       "      <td>200</td>\n",
+       "      <td>140</td>\n",
+       "      <td>Jones LLC</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>140.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alpha Co</td>\n",
+       "      <td>200</td>\n",
+       "      <td>210</td>\n",
+       "      <td>215</td>\n",
+       "      <td>Alpha Co</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>215.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Blue Inc</td>\n",
+       "      <td>50</td>\n",
+       "      <td>90</td>\n",
+       "      <td>95</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     account  Jan  Feb  Mar    bedrijf    Jan    Feb    Apr\n",
+       "0  Jones LLC  150  200  140  Jones LLC  150.0  200.0  140.0\n",
+       "1   Alpha Co  200  210  215   Alpha Co  200.0  210.0  215.0\n",
+       "2   Blue Inc   50   90   95        NaN    NaN    NaN    NaN"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([df, df2], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "51c53838",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>account</th>\n",
+       "      <th>Jan</th>\n",
+       "      <th>Feb</th>\n",
+       "      <th>Mar</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jones LLC</td>\n",
+       "      <td>150</td>\n",
+       "      <td>200</td>\n",
+       "      <td>140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alpha Co</td>\n",
+       "      <td>200</td>\n",
+       "      <td>210</td>\n",
+       "      <td>215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Blue Inc</td>\n",
+       "      <td>50</td>\n",
+       "      <td>90</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     account  Jan  Feb  Mar\n",
+       "0  Jones LLC  150  200  140\n",
+       "1   Alpha Co  200  210  215\n",
+       "2   Blue Inc   50   90   95"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "94298722",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>account</th>\n",
+       "      <th>Jan_x</th>\n",
+       "      <th>Feb_x</th>\n",
+       "      <th>Mar</th>\n",
+       "      <th>bedrijf</th>\n",
+       "      <th>Jan_y</th>\n",
+       "      <th>Feb_y</th>\n",
+       "      <th>Apr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jones LLC</td>\n",
+       "      <td>150</td>\n",
+       "      <td>200</td>\n",
+       "      <td>140</td>\n",
+       "      <td>Jones LLC</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>140.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alpha Co</td>\n",
+       "      <td>200</td>\n",
+       "      <td>210</td>\n",
+       "      <td>215</td>\n",
+       "      <td>Alpha Co</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>215.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Blue Inc</td>\n",
+       "      <td>50</td>\n",
+       "      <td>90</td>\n",
+       "      <td>95</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     account  Jan_x  Feb_x  Mar    bedrijf  Jan_y  Feb_y    Apr\n",
+       "0  Jones LLC    150    200  140  Jones LLC  150.0  200.0  140.0\n",
+       "1   Alpha Co    200    210  215   Alpha Co  200.0  210.0  215.0\n",
+       "2   Blue Inc     50     90   95        NaN    NaN    NaN    NaN"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.merge(df2, how='left', left_on='account', right_on='bedrijf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e367aa3f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "4277ba4b",
+   "id": "ee9928e4",
    "metadata": {},
    "source": [
     "# Read HTML"
@@ -289,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "8091c1db",
+   "id": "4186a096",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "77df5c43",
+   "id": "d0b6af10",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9bf9fb3e",
+   "id": "978a1b01",
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78abe7a8",
+   "id": "9d0c8b3a",
    "metadata": {},
    "outputs": [],
    "source": []
