--- a/Opdrachten/uitwerkingen/Opdracht 5.2 - Classificatie.ipynb
+++ b/Opdrachten/uitwerkingen/Opdracht 5.2 - Classificatie.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "[105 rows x 12 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
        "125            0.708333  0.528857  0.195700 -0.130995   virginica  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,26 +1196,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_names = ['sepal_length', 'sepal_width', 'petal_length', 'petal_width']\n",
-    "# feature_names = ['sepal_length_scaled', 'sepal_width_scaled', 'petal_length_scaled', 'petal_width_scaled']\n",
+    "# feature_names = ['sepal_length', 'sepal_width', 'petal_length', 'petal_width']\n",
+    "# feature_names = ['petal_length', 'petal_width']\n",
+    "feature_names = ['sepal_length_scaled', 'sepal_width_scaled', 'petal_length_scaled', 'petal_width_scaled']\n",
     "# feature_names = [name for name in names[:-1] if 'scaled' in name]\n",
     "# feature_names = [name for name in names[:-1] if 'PCA3' in name]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "features: ['sepal_length', 'sepal_width', 'petal_length', 'petal_width']\n",
+      "features: ['sepal_length_scaled', 'sepal_width_scaled', 'petal_length_scaled', 'petal_width_scaled']\n",
       "target: species\n"
      ]
     }
@@ -1227,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1257,12 +1258,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_train[target_name] = df_train[target_name].astype('category')\n",
     "df_test[target_name] = df_test[target_name].astype('category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "91     versicolor\n",
+       "63     versicolor\n",
+       "103     virginica\n",
+       "6          setosa\n",
+       "59     versicolor\n",
+       "29         setosa\n",
+       "27         setosa\n",
+       "35         setosa\n",
+       "99     versicolor\n",
+       "122     virginica\n",
+       "82     versicolor\n",
+       "42         setosa\n",
+       "117     virginica\n",
+       "61     versicolor\n",
+       "43         setosa\n",
+       "79     versicolor\n",
+       "100     virginica\n",
+       "25         setosa\n",
+       "108     virginica\n",
+       "94     versicolor\n",
+       "74     versicolor\n",
+       "54     versicolor\n",
+       "51     versicolor\n",
+       "73     versicolor\n",
+       "109     virginica\n",
+       "48         setosa\n",
+       "123     virginica\n",
+       "92     versicolor\n",
+       "102     virginica\n",
+       "11         setosa\n",
+       "98     versicolor\n",
+       "126     virginica\n",
+       "40         setosa\n",
+       "133     virginica\n",
+       "77     versicolor\n",
+       "24         setosa\n",
+       "8          setosa\n",
+       "20         setosa\n",
+       "22         setosa\n",
+       "93     versicolor\n",
+       "36         setosa\n",
+       "68     versicolor\n",
+       "32         setosa\n",
+       "141     virginica\n",
+       "125     virginica\n",
+       "Name: species, dtype: category\n",
+       "Categories (3, object): ['setosa', 'versicolor', 'virginica']"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test_target"
    ]
   },
   {
@@ -1274,18 +1341,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 102,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style>#sk-container-id-11 {color: black;background-color: white;}#sk-container-id-11 pre{padding: 0;}#sk-container-id-11 div.sk-toggleable {background-color: white;}#sk-container-id-11 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-11 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-11 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-11 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-11 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-11 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-11 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-11 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-11 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-11 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-11 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-11 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-11 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-11 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-11 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-11 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-11 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-11 div.sk-item {position: relative;z-index: 1;}#sk-container-id-11 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-11 div.sk-item::before, #sk-container-id-11 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-11 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-11 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-11 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-11 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-11 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-11 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-11 div.sk-label-container {text-align: center;}#sk-container-id-11 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-11 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-11\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier(n_neighbors=3)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-11\" type=\"checkbox\" checked><label for=\"sk-estimator-id-11\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">KNeighborsClassifier</label><div class=\"sk-toggleable__content\"><pre>KNeighborsClassifier(n_neighbors=3)</pre></div></div></div></div></div>"
+      ],
       "text/plain": [
        "KNeighborsClassifier(n_neighbors=3)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -2300,7 +2370,7 @@
        "125     virginica         True  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2314,7 +2384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -2325,13 +2395,35 @@
        "Name: 3NN_correct, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_test['3NN_correct'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "98"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_true, n_false = df_test['3NN_correct'].value_counts()\n",
+    "accuracy = (n_true/(n_true + n_false))*100\n",
+    "round(accuracy)"
    ]
   },
   {
@@ -9683,7 +9775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
