--- a/Sandbox/haarlemmermeer.ipynb
+++ b/Sandbox/haarlemmermeer.ipynb
@@ -2088,7 +2088,8 @@
    "hash": "08ebd4036f24752a45db97068f413d345156a4c483814728a95106a820ee787d"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.4 64-bit ('geopandas': conda)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -2101,9 +2102,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.13"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
