--- a/Sandbox/demo numpy nov.ipynb
+++ b/Sandbox/demo numpy nov.ipynb
@@ -1348,6 +1348,149 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  1.        ,  2.        , -1.08867216,  0.482036  ])"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kopie = a.copy()\n",
+    "kopie[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9.        ,  8.        ,  7.        , ..., -0.17605151,\n",
+       "       -1.34800807, -0.02662506])"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0] = 9\n",
+    "a[1] = 8\n",
+    "a[2] = 7\n",
+    "\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  1.        ,  2.        , -1.08867216,  0.482036  ])"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kopie[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9.        ,  8.        ,  7.        , ..., -0.17605151,\n",
+       "       -1.34800807, -0.02662506])"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = a[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([99.        , 99.        , 99.        , 99.        ,  0.482036  ,\n",
+       "        0.93659967, -1.1219639 , -0.98102709,  1.58913269,  0.29905533])"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[0] = 99\n",
+    "s[1] = 99\n",
+    "s[2] = 99\n",
+    "s[3] = 99\n",
+    "\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([99.        , 99.        , 99.        , 99.        ,  0.482036  ,\n",
+       "        0.93659967, -1.1219639 , -0.98102709,  1.58913269,  0.29905533])"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
