--- a/demo pandas nov.ipynb
+++ b/demo pandas nov.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +39,7 @@
        "      <th>Jan</th>\n",
        "      <th>Feb</th>\n",
        "      <th>Mar</th>\n",
+       "      <th>Apr</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -47,31 +48,34 @@
        "      <td>Jones LLC</td>\n",
        "      <td>150</td>\n",
        "      <td>200</td>\n",
-       "      <td>140</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Alpha Co</td>\n",
        "      <td>200</td>\n",
        "      <td>210</td>\n",
-       "      <td>215</td>\n",
+       "      <td>215.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Blue Inc</td>\n",
        "      <td>50</td>\n",
        "      <td>90</td>\n",
-       "      <td>95</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>95.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     account  Jan  Feb  Mar\n",
-       "0  Jones LLC  150  200  140\n",
-       "1   Alpha Co  200  210  215\n",
-       "2   Blue Inc   50   90   95"
+       "     account  Jan  Feb    Mar   Apr\n",
+       "0  Jones LLC  150  200  140.0   NaN\n",
+       "1   Alpha Co  200  210  215.0   NaN\n",
+       "2   Blue Inc   50   90    NaN  95.0"
       ]
      },
      "execution_count": 3,
@@ -82,7 +86,7 @@
    "source": [
     "sales = [{'account': 'Jones LLC', 'Jan': 150, 'Feb': 200, 'Mar': 140},\n",
     "         {'account': 'Alpha Co',  'Jan': 200, 'Feb': 210, 'Mar': 215},\n",
-    "         {'account': 'Blue Inc',  'Jan': 50,  'Feb': 90,  'Mar': 95 }]\n",
+    "         {'account': 'Blue Inc',  'Jan': 50,  'Feb': 90,  'Apr': 95 }]\n",
     "\n",
     "df = pd.DataFrame(sales)\n",
     "df"
@@ -90,7 +94,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>account</th>\n",
+       "      <th>Jan</th>\n",
+       "      <th>Feb</th>\n",
+       "      <th>Mar</th>\n",
+       "      <th>Apr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jones LLC</td>\n",
+       "      <td>150</td>\n",
+       "      <td>200</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alpha Co</td>\n",
+       "      <td>200</td>\n",
+       "      <td>210</td>\n",
+       "      <td>215.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     account  Jan  Feb    Mar  Apr\n",
+       "0  Jones LLC  150  200  140.0  NaN\n",
+       "1   Alpha Co  200  210  215.0  NaN"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dropna(subset=('Mar'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +175,7 @@
        "Name: account, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
