--- a/Sandbox/demo machine learning.ipynb
+++ b/Sandbox/demo machine learning.ipynb
@@ -1823,7 +1823,7 @@
     }
    ],
    "source": [
-    "classifier = MLPClassifier(activation = 'relu', hidden_layer_sizes = [5, 5], max_iter = 1000)\n",
+    "classifier = MLPClassifier(activation = 'relu', hidden_layer_sizes = [8, 6, 5], max_iter = 1000)\n",
     "\n",
     "classifier.fit(df_features_train, df_target_train)\n",
     "\n",
