--- a/Training/penguins.ipynb
+++ b/Training/penguins.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -940,6 +940,34 @@
     "\n",
     "accuracy = calc_accuracy(df_test[method + '_correct'])\n",
     "print(f'Accuracy for {method}: {accuracy}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.90909091, 0.96428571]),\n",
+       " array([0.95238095, 0.93103448]),\n",
+       " array([0.93023256, 0.94736842]),\n",
+       " array([42, 58]))"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sklearn.metrics as sklm\n",
+    "\n",
+    "prediction = 'RF_predicted'\n",
+    "metrics = sklm.precision_recall_fscore_support(df_test[target_name], df_test[prediction])\n",
+    "\n",
+    "metrics"
    ]
   },
   {
