--- a/Sandbox/pearson father son.ipynb
+++ b/Sandbox/pearson father son.ipynb
@@ -293,7 +293,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -307,9 +307,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.4"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "d0ab77bcfd285eeaac2f5e895261c5cbe96f15cb3eb6b9e858040163096b370e"
@@ -317,5 +316,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
