--- a/Opdrachten/uitwerkingen/Opdracht 2.3 - Lineaire regressie.ipynb
+++ b/Opdrachten/uitwerkingen/Opdracht 2.3 - Lineaire regressie.ipynb
@@ -155,9 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -578,7 +576,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -592,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
@@ -601,5 +599,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
