--- a/Training 2025-02/gapminder.ipynb
+++ b/Training 2025-02/gapminder.ipynb
@@ -260,27 +260,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Asia', 'Europe', 'Africa', 'Oceania', 'North America',\n",
-       "       'South America'], dtype=object)"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_year['Continent'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
    "outputs": [],
@@ -397,7 +376,7 @@
     "                palette = continent_colors,\n",
     "                edgecolor = '#444',\n",
     "                size = sizes,\n",
-    "                sizes=(30, 8000),\n",
+    "                sizes = (30, 8000),\n",
     "                ax = ax)\n",
     "\n",
     "ax.set_title('World Bank Databank World Developments Indicators', fontsize=20)\n",
@@ -409,7 +388,7 @@
     "ax.set_ylabel('Life expectancy', fontsize=16)\n",
     "\n",
     "ax.set_axisbelow(True)\n",
-    "patches = [mpatches.Patch(color=color, label=continent) for continent, color in continent_colors.items()]\n",
+    "patches = [mpatches.Patch(color=color, label=continent) for continent, color in .items()]\n",
     "ax.legend(handles=patches)\n",
     "\n",
     "ax.text(0.5, 0.35, str(year), \n",
@@ -419,7 +398,7 @@
     "\n",
     "ax.grid()\n",
     "\n",
-    "plt.show()"
+    "plt.show()continent_colors"
    ]
   },
   {
